# ctg_project

./: .gitignore  README.md  run_pipeline.py
cpp/: CMakeLists.txt  CTGProcessor.cpp  CTGProcessor.h  CsvWriter.cpp  CsvWriter.h  SignalExtractor.cpp  SignalExtractor.h  main.cpp
output/: ctg_result.csv  fhr_timeseries.csv  final_report.md  toco_timeseries.csv
python/: analyze_csv.py  postprocess_results.py  visualize.py
